# genetic-art

./: .gitignore  Cargo.toml  README.md  config.toml
src/: chromosome.rs  main.rs
