[package]
name = "genetic-pixel-art"
version = "0.1.0"
edition = "2024"

[dependencies]
genetica = "2.2.1"
image = "0.25.9"
lazy_static = "1.5.0"
rand = "0.10.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
lto = false
incremental = true
codegen-units = 32

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
